# api/http/dto/auth_dto.go
@@ -3,6 +3,14 @@
 package dto
 
 type AuthRequest struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=8"`
+	Email    string `json:"email" validate:"required,email" example:"hehe@gmail.com"`
+	Password string `json:"password" validate:"required,min=8" example:"hehe1234"`
+}
+
+type LogoutRequest struct {
+	RefreshToken string `json:"refresh_token" example:"eyJhbGciOiJFUzI1NiIsInR5c..."`
+}
+
+type RotateRequest struct {
+	RefreshToken string `json:"refresh_token" example:"eyJhbGciOiJFUzI1NiIsInR5c..."`
 }
